--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -12,4 +12,28 @@ body {
 :root {
     ---background-color: #09090b;
     ---border-color: #363636;
+    --background: #08080a;
+    --foreground: #f9f9f9;
+    --card: #808080;
+    --card-foreground: #f9f9f9;
+    --popover: #08080a;
+    --popover-foreground: #f9f9f9;
+    --primary: #f9f9f9;
+    --primary-foreground: #17171b;
+    --secondary: #27272a;
+    --secondary-foreground: #f9f9f9;
+    --muted: #27272a;
+    --muted-foreground: #a1a1a9;
+    --accent: #27272a;
+    --accent-foreground: #f9f9f9;
+    --destructive: #7f1d1d;
+    --destructive-foreground: #f9f9f9;
+    --border: #27272a;
+    --input: #27272a;
+    --ring: #d3d3d7;
+    --chart-1: #2661d8;
+    --chart-2: #2db789;
+    --chart-3: #e88c30;
+    --chart-4: #af56db;
+    --chart-5: #e2366f;
 }
