--- a/src/styles/NavbarInfo.module.css
+++ b/src/styles/NavbarInfo.module.css
@@ -1,4 +1,3 @@
-
 .infoContainer {
     display: flex;
     align-items: center;
@@ -24,5 +23,13 @@
     justify-content: center;
     gap: 10px;
     font-size: 15px;
+    border: 0;
     border-radius: 60px;
+    cursor: pointer;
+    transition: all 0.25s ease-out;
+}
+.infoContainer button:hover {
+    background-color: #000;
+    color: var(--primary);
+    border: 0;
 }
