--- a/src/styles/NavbarSearch.module.css
+++ b/src/styles/NavbarSearch.module.css
@@ -1,4 +1,5 @@
 .searchContainer {
+    background-color: var(---background-color);
     display: flex;
     align-items: center;
     justify-content: center;
